<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Cerrar sesión</string>
    <string name="settings">Configuración</string>
    <string name="favorites">Mis favoritos</string>
    <string name="home">Inicio</string>
    <string name="loginWelcome">Bienvenido al parcial de TP3</string>
    <string name="loginSubtitle">¿Iniciamos sesión?</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="continuar">Iniciar sesión</string>
    <string name="olvidaste_tu_contrasena"><a href="https://www.google.com">¿Olvidaste tu contraseña?</a></string>
    <string name="todo">TODO</string>
    <string name="character">Character</string>
    <string name="myFavorites">Mis personajes favoritos</string>
    <string name="nigth_mode">Nigth Mode</string>
    <string name="permitir_agregar_favoritos">Permitir agregar Favoritos</string>
    <string name="buscador_habilitado">Buscador habilitado</string>
    <string name="origen">Origen:</string>
    <string name="especie">Especie:</string>
    <string name="nombre">Nombre:</string>
    <string name="alive">Alive</string>
    <string name="todo1">TODO</string>
    <string name="homeHeader">Página principal</string>
    <string name="Alive">Alive</string>
    <string name="Dead">Dead</string>
    <string name="AliveTranslated">Vivo</string>
    <string name="DeadTranslated">Muerto</string>
    <string name="Unknown">Desconocido</string>



    <string name="baseURL">https://rickandmortyapi.com/</string>
    <!-- Home Strings -->
    <string name="welcome">¡Hola, %s !</string>
</resources>